chore: update project and add more examples
