# ClientGenerator/Controllers/WeatherForecastController.cs
@@ -1,8 +1,10 @@
 ﻿namespace ClientGenerator.Controllers
 {
+    using ClientGenerator.Models;
     using Microsoft.AspNetCore.Authorization;
     using Microsoft.AspNetCore.Http;
     using Microsoft.AspNetCore.Mvc;
+    using Microsoft.AspNetCore.Routing;
     using Microsoft.Extensions.Logging;
     using System;
     using System.Collections.Generic;
@@ -26,6 +28,7 @@
         }
 
         [HttpGet]
+        [AllowAnonymous]
         [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(IEnumerable<WeatherForecast>))]
         [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(int))]
         public IEnumerable<WeatherForecast> Get()
@@ -33,11 +36,41 @@
             var rng = new Random();
             return Enumerable.Range(1, 5).Select(index => new WeatherForecast
             {
+                Id = Guid.NewGuid(),
                 Date = DateTime.Now.AddDays(index),
                 TemperatureC = rng.Next(-20, 55),
                 Summary = Summaries[rng.Next(Summaries.Length)]
             })
             .ToArray();
+        }
+
+        [HttpGet("{id}")]
+        [AllowAnonymous]
+        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(WeatherForecast))]
+        [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(int))]
+        [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(int))]
+        public WeatherForecast GetById(Guid Id)
+        {
+            var rng = new Random();
+            return new WeatherForecast
+            {
+                Id = Id,
+                Date = DateTime.Now,
+                TemperatureC = rng.Next(-20, 55),
+                Summary = Summaries[rng.Next(Summaries.Length)]
+            };
+        }
+
+        [HttpPost]
+        [Authorize]
+        [ProducesResponseType(StatusCodes.Status201Created, Type = typeof(WeatherForecast))]
+        [ProducesResponseType(StatusCodes.Status401Unauthorized, Type = typeof(int))]
+        [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(int))]
+        public ActionResult<WeatherForecast> Post(WeatherForecastCreate weatherForecast)
+        {
+            //Create operation code
+
+            return CreatedAtAction(nameof(GetById), new { id = weatherForecast.Id }, weatherForecast);
         }
     }
 }
